network_policies/network_policy_deny_front_to_data.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-deny-all
  namespace: prod
spec:
  podSelector:
    matchLabels:
      role: database
  policyTypes:
  - Ingress
